Particle creation artifacts #48991

Closed
opened 2016-08-01 14:18:08 +02:00 by Konstantins Visnevskis · 6 comments

System Information
3x gtx580 (win8.1x64), IntelGma (Ubuntu 14)

Blender Version
2.77a

Short description of error
On an animated parented object, many particles get generated with constant offset from object.
Note: why the delete button is disabled for particles in particle edit mode (baked or not)?

Exact steps for others to reproduce the error

  • Open file z-er-particles.blend,
  • Run animation,
  • Particles get generated on both the object and some pseudo-trajectory of larger radius.
**System Information** 3x gtx580 (win8.1x64), IntelGma (Ubuntu 14) **Blender Version** 2.77a **Short description of error** On an animated parented object, many particles get generated with constant offset from object. Note: why the delete button is disabled for particles in particle edit mode (baked or not)? **Exact steps for others to reproduce the error** - Open file [z-er-particles.blend](https://archive.blender.org/developer/F330871/z-er-particles.blend), - Run animation, - Particles get generated on both the object and some pseudo-trajectory of larger radius.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Alexander Gavrilov self-assigned this 2016-08-01 19:31:40 +02:00

It looks like due to some kind of numeric precision issues in the loop condition the last subframe isn't properly evaluated, and that makes particles that were supposed to be emitted during that time go crazy.

It looks like due to some kind of numeric precision issues in the loop condition the last subframe isn't properly evaluated, and that makes particles that were supposed to be emitted during that time go crazy.

This issue was referenced by 4067ab38ab

This issue was referenced by 4067ab38ab6035f71b6ce3f2f610000411160d21

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48991
No description provided.